[UPDATE] 업적 썸네일 이미지 추가

--- a/src/pages/Main/mainPage.html
+++ b/src/pages/Main/mainPage.html
@@ -6,7 +6,7 @@
     <title>Mainpage</title>
     <link rel="stylesheet" href="./manholeTable/manholeTable.css" />
     <link rel="stylesheet" href="./MainPage.css" />
-    <link rel="stylesheet" href="main_trainer.css" />
+    <link rel="stylesheet" href="./main_trainer.css" />
   </head>
   <body>
     <div class="manholetable-modal" style="display: none">
