[DELETE] 레거시 제거

--- a/src/pages/Achievements/AchievementsPage.html
+++ b/src/pages/Achievements/AchievementsPage.html
@@ -563,9 +563,9 @@
       <div>
         <div class="manholetable">
           <h1>Challenge</h1>
-          <h5>총 도전 과제: 115</h5>
+          <!-- <h5>총 도전 과제: 115</h5>
           <h6>전체 플레이어 대비 비율 (%)&nbsp;</h6>
-          <h5>도전 과제 진행률: 83 / 115 (72%)</h5>
+          <h5>도전 과제 진행률: 83 / 115 (72%)</h5> -->
           <table class="manholetableline"></table>
         </div>
       </div>
