--- a/01_Mainpage/Mainpage.html
+++ b/01_Mainpage/Mainpage.html
@@ -319,6 +319,14 @@
       modal.style.display = 'none';
     });
   </script>
+  <div class="cursor">
+    <link rel="stylesheet" href="../06_/Cursor/cursor.css">
+    <script src="../06_/Cursor/cursor.js"></script>
+    <img src="../src/assets/gif/pokeball.gif" style="width: 5%;">
+  </div>
+  <script src="tilt.js"></script>
+
 </body>
+
 
 </html>
