--- a/02_Regions/Kanto.html
+++ b/02_Regions/Kanto.html
@@ -11,6 +11,36 @@
       background-image: url(../01_Mainpage/src/bg_dot.png);
     }
 
+    ::-webkit-scrollbar {
+      display: none;
+    }
+
+    img:hover {
+      opacity: 1;
+      -webkit-animation: flash 14.5s;
+      animation: flash 1.5s;
+    }
+
+    @-webkit-keyframes flash {
+      0% {
+        opacity: .4;
+      }
+
+      100% {
+        opacity: 1;
+      }
+    }
+
+    @keyframes flash {
+      0% {
+        opacity: .4;
+      }
+
+      100% {
+        opacity: 1;
+      }
+    }
+
     .tablecontainer {
       width: 100%;
       height: 100vh;
@@ -207,11 +237,16 @@
               <img src="../src/assets/hole/Kanto/Tokyo/machida5/machida5_l.png" alt="" width="" />
               <img src="../src/assets/hole/Kanto/Tokyo/machida6/machida6_l.png" alt="" width="" />
               <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara1/Ogasawara1_l.png" alt="" width="" />
-              <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara2/Ogasawara2_l.png" alt="" width="" />
-              <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara3/Ogasawara3_l.png" alt="" width="" />
-              <img src="../src/assets/hole/Kanto/Tokyo/Ogasawara4/Ogasawara4_l.png" alt="" width="" />
-              <img src="../src/assets/hole/Kanto/Tokyo/ueno1/ueno1_sml.png" alt="" width="" />
-              <img src="../src/assets/hole/Kanto/Tokyo/ueno2/ueno2_l.png" alt="" width="" /></a>
+              <img style="filter: grayscale(1);" src="../src/assets/hole/Kanto/Tokyo/Ogasawara2/Ogasawara2_l.png" alt=""
+                width="" />
+              <img style="filter: grayscale(1);" src="../src/assets/hole/Kanto/Tokyo/Ogasawara3/Ogasawara3_l.png" alt=""
+                width="" />
+              <img style="filter: grayscale(1);" src="../src/assets/hole/Kanto/Tokyo/Ogasawara4/Ogasawara4_l.png" alt=""
+                width="" />
+              <img style="filter: grayscale(1);" src="../src/assets/hole/Kanto/Tokyo/ueno1/ueno1_sml.png" alt=""
+                width="" />
+              <img style="filter: grayscale(1);" src="../src/assets/hole/Kanto/Tokyo/ueno2/ueno2_l.png" alt=""
+                width="" /></a>
           </td>
         </tr>
         <tr>
@@ -240,7 +275,7 @@
     <script src="../06_/Cursor/cursor.js"></script>
     <img src="../src/assets/gif/pokeball.gif" style="width: 5%;">
   </div>
-  <script src="tilt.js"></script>
+  <script src="../06_/Tilt/tilt.js"></script>
 </body>
 
 </html>
