--- a/03_City/Kanto_Tokyo.html
+++ b/03_City/Kanto_Tokyo.html
@@ -185,22 +185,22 @@
         <li class="manholitem">
           <a href="../04_Manhole/manhole_Pikachu.html">
             <div class="container5"><img src="../src/assets/hole/Kanto/Kanagawa/yokohama4/yokohama4_l.png" alt=""
-                width="130px" />
+                width="130px" /></div>
           </a>
           <h5>마치다</h5>
         </li>
         <li class="manholitem">
           <a href="../04_Manhole/manhole_Gaioga.html">
             <div class="container6"><img src="../src/assets/hole/Kyushu-Okinawa/Okinawa/miyakojima_l.png" alt=""
-                width="130px" />
+                width="130px" /></div>
           </a>
           <h5>마치다</h5>
         </li>
 
         <li class="manholitem">
           <div class="container7"><img src="../src/assets/hole/Kanto/Tokyo/Ogasawara1/Ogasawara1_l.png" alt=""
-              width="130px" />
-            <h5>오가사와라</h5>
+              width="130px" /></div>
+          <h5>오가사와라</h5>
         </li>
         <li class="manholitem">
           <img style="filter: grayscale(1);" src="../src/assets/hole/Kanto/Tokyo/Ogasawara2/Ogasawara2_l.png" alt=""
@@ -219,12 +219,13 @@
         </li>
         <li class="manholitem">
           <div class="container8"><img src="../src/assets/hole/Kinki/Hyogo/awaji3/awaji3_l.png" alt="" width="130px" />
-            <h5>우에노</h5>
+          </div>
+          <h5>우에노</h5>
         </li>
         <li class="manholitem">
           <a href="../04_Manhole/manhole_Yadon.html">
             <div class="container9"><img src="../src/assets/hole/Chugoku-Shikoku/Kagawa/Mitoyo_l.png" alt=""
-                width="130px" />
+                width="130px" /></div>
           </a>
           <h5>우에노</h5>
         </li>
