--- a/03_City/Kanto_Tokyo.html
+++ b/03_City/Kanto_Tokyo.html
@@ -234,7 +234,7 @@
   </div>
   <img class="pikahang" src="../src/assets/pikahang.png" alt="" />
   <div style="position: absolute; left: 40px; top: 40px">
-    <a href="file:///Users/tamura/Documents/GitHub/PokeManhole_Front/hello.html">
+    <a href="../01_Mainpage/Mainpage.html">
       <img src="../01_Mainpage/src/manhole_title_ko_grey_clean.png" alt="" width="250px" class="logoshadow" />
     </a>
   </div>
